--- a/slug-health/manifest.json
+++ b/slug-health/manifest.json
@@ -2,5 +2,15 @@
     "name": "Slug Health",
     "description": "Build an Extension!",
     "version": "1.0",
-    "manifest_version": 3
-  }
+    "manifest_version": 3,
+
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    },
+
+    "permissions": [
+        "activeTab"
+    ]
+
+}
