--- a/slug-health/manifest.json
+++ b/slug-health/manifest.json
@@ -9,6 +9,13 @@
         "default_popup": "popup.html"
     },
 
+    "content_scripts":[
+        {
+            "matches":["<all_urls>"],
+            "js": ["alert.js"]
+        }
+    ],
+
     "permissions": [
         "activeTab"
     ]
